# helloworlds

./: .gitignore
assembly/c64/: final.prg  helloworld.asm
assembly/x86/boot/: README.org  floppy.img
assembly/x86/helloworldlinux/: final  main.asm  readme.txt
assembly/x86/mix_asm_cpp/: final  main.cpp  readme.txt  routine.asm
assembly/x86/simpleos/: Readme.txt  boot.asm  boot.flp
assembly/z80/: hellosms.asm  linkfile.txt  smspower.sms
concepts/boot/: boot.asm
concepts/commodore/: constants.asm  final.prg  loadscreen.prg  main.asm  ship.spd  vessel.prg
concepts/decorator_python/: main.py
concepts/nodejs_xplane_rpos/: index.js  package-lock.json  package.json
concepts/regex_python/: main.py
concepts/smsconverter_msvc/: smsconverter.sln
concepts/smsconverter_msvc/Release/: output.data  smsconverter.exp  smsconverter.iobj  smsconverter.ipdb  smsconverter.lib
concepts/smsconverter_msvc/libs/: SDL2-static.lib  SDL2.exp
concepts/smsconverter_msvc/smsconverter/: main.cpp  smsconverter.vcxproj
concepts/splines_tk/: splines_tk.sln
concepts/splines_tk/splines_tk/: splines_tk.py  splines_tk.pyproj
cpp/WindowsAPI/: WindowsAPI.sln
cpp/WindowsAPI/Debug/: WindowsAPI.ilk
cpp/WindowsAPI/WindowsAPI/: WindowsAPI.cpp  WindowsAPI.vcxproj  (+1 more)
cpp/XboxHelloWorld/: XboxHelloWorld.sln
cpp/direct3d_tuto_tbd/: direct3d_tuto_tbd.sln
cpp/openmp/: openmp.sln
cpp/wxWidgets/: CMakeLists.txt  app.hpp  frame.hpp  glcontext.hpp
wxWidgets/: #glcontext.hpp#  .#glcontext.hpp  CMakeCache.txt  Makefile  app.cpp  cmake_install.cmake  frame.cpp  helloworld
(+67 files in other folders)
